name: ghc-paths
version: 0.1.0.11
license: BSD3
license-file: LICENSE
copyright: (c) Simon Marlow
author: Simon Marlow
maintainer: Simon Marlow <marlowsd@gmail.com>
stability: stable
synopsis: Knowledge of GHC's installation directories
description: Knowledge of GHC's installation directories
category: Development
cabal-version: >= 1.6
build-type: Custom

tested-with:
  GHC ==7.0.4
   || ==7.2.2
   || ==7.4.2
   || ==7.6.3
   || ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.3
   || ==8.6.1

custom-setup
        setup-depends: base >= 3 && < 5, Cabal >= 1.6 && <2.6, directory

library
        build-depends: base >= 3 && < 5
        exposed-modules: GHC.Paths

source-repository head
  type:     git
  location: https://github.com/simonmar/ghc-paths
